[package]
name = "smallmap"
description = "Small byte-sized generic key-value map type"
keywords = ["map", "table", "small", "key", "value"]
repository = "https://github.com/notflan/smallmap"
homepage= "https://git.flanchan.moe/flanchan/smallmap"
version = "1.3.2"
authors = ["Avril <flanchan@cumallover.me>"]
edition = "2018"
license = "MIT"

[dependencies]
serde = {version = "1.0.116", features = ["derive"], optional = true}

[dev-dependencies]
serde_json = "1.0.59"

[build-dependencies]
rustc_version = "0.2"
