[package]
name = "smallmap"
description = "Small byte-sized generic key-value map type"
keywords = ["map", "table", "small", "key", "value"]
repository = "https://github.com/notflan/smallmap"
homepage= "https://git.flanchan.moe/flanchan/smallmap"
version = "1.3.4"
authors = ["Avril <flanchan@cumallover.me>"]
edition = "2018"
license = "MIT"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
strip=true

[features]
# TODO: maybe add an FFI feature, to allow C projects to use it? idk if that's worth it really...

[dependencies]
serde = {version = "1.0.116", features = ["derive"], optional = true}
# TODO: optional smallvec feature: instead of heap-allocating the first page, it can be placed on the stack.


[dev-dependencies]
serde_json = "1.0.59"

[build-dependencies]
rustc_version = "0.2"
